Fixed the bug, where animation was not showing

--- a/src/components/CreateWorkout-View/CreateWorkout.css
+++ b/src/components/CreateWorkout-View/CreateWorkout.css
@@ -14,12 +14,15 @@ width: 320px;
 
 select {
 margin: 10px;
+height: 30px;
+border-color:black;
 }
 .exercise-list{
 width: 100%;
 max-width: 300px;
-height: 20px;
+height: 30px;
 }
+
 
 .submit-btn{
 font-size: 20px;
